# vclaw

./: .gitignore  Cargo.toml  INSTALL.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: architecture.md
docs/plans/: 2026-02-28-vclaw-design.md
src/: audio.rs  auth.rs  brain.rs  config.rs  event.rs  ipc.rs  lib.rs  main.rs  status.rs  tmux.rs  tts.rs  tui.rs  voice.rs
tests/: auth_test.rs  brain_test.rs  config_test.rs  event_test.rs  tmux_test.rs  tts_test.rs
