[package]
name = "vclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ratatui = "0.29"
crossterm = "0.28"
cpal = "0.15"
whisper-rs = "0.12"
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
bytes = "1"

[dev-dependencies]
tempfile = "3"
