[package]
name = "vclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
whisper-rs = "0.12"
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
futures = "0.3"
bytes = "1"
rodio = "0.19"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
url = "2"
libc = "0.2"
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }

[dev-dependencies]
tempfile = "3"
